--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "basiclightbox": "^5.0.4"
+    "basiclightbox": "^5.0.4",
+    "simplelightbox": "^2.12.1"
+  },
+  "devDependencies": {
+    "@types/basiclightbox": "^5.0.1"
   }
 }
